<resources>
    <string name="app_name">UAS2020_MOBILE-DL_21498_AlbertWijaya_Soal02</string>
    <string name="title_activity_home2" translatable="false">MainActivity</string>
    <string name="title_activity_real" translatable="false">MainActivity</string>
    <string name="title_activity_main2" translatable="false">MainActivity</string>
    <string name="title_activity_home" translatable="false">MainActivity</string>

    <!--Multiple Use-->
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="darkMode">Dark Mode</string>
    <string name="language" translatable="true">Language</string>
    <string name="editProfile" translatable="true">Edit Profile</string>
    <string name="Logout" translatable="true">Logout</string>
    <string name="done" translatable="true">Done Editing</string>
    <string name="back" translatable="true">Back</string>
    <string name="name" translatable="true">Name</string>

    <!--HomeActivity-->
    <string name="title_home" translatable="true">List</string>
    <string name="title_dashboard" translatable="true">Settings</string>
    <string name="title_notifications" translatable="true">Profile</string>

    <!--MainActivity-->
    <string name="signIn" translatable="true">Sign in</string>
    <string name="register" translatable="true">Register</string>

    <!--RegisterActivity-->
    <string name="confirmPassword" translatable="true">Confirm Password</string>
    <string name="signUp" translatable="true">Sign Up</string>

    <!--Settings-->
    <string name="viewMode" translatable="true">View Mode</string>
    <string name="about" translatable="true">About App</string>

    <!--Profile-->
    <string name="oblTo" translatable="true">Obligated To</string>
    <string name="classes" translatable="true">Class(es) I teach</string>
    <string name="salary" translatable="true">Salary</string>
    <string name="contact" translatable="true">Contact Me</string>

    <!--AddActivity-->
    <string name="phone">Phone Number</string>
    <string name="position">Position</string>
    <string name="subject">Subject</string>
    <string name="bio">Biography</string>
    <string name="pp" translatable="false">Upload Profile Picture</string>
    <string name="add">Add</string>

    <!--HomeFragment-->
    <string name="search">Search</string>

    <string name="aboutApp1" translatable="true">This is an employee management app, you can login, register, add employee, and edit employee.</string>
    <string name="aboutApp2" translatable="true">Day 1: creating login, register, profile, edit profile</string>
    <string name="aboutApp3" translatable="true">Day 2: creating setting, home view, add &amp; edit employee</string>
    <string name="aboutApp4" translatable="true">Day 3: creating vid, txt, assessment &amp; submitting project. </string>
    <string name="aboutApp5">Helper : Vanessa Ardelia</string>
    <string name="aboutApp6">Up : Firebase over Room!!!!111!!!</string>
    <string name="aboutApp7" translatable="true">Down : how to set theme Spinner??????????</string>
    <string name="aboutApp8">Thanks</string>
    <string-array name="position">
        <item>Coordinator &amp; Lecturer</item>
        <item>Lecturer</item>
        <item>Head of Lab</item>
        <item>Lab Coordinator</item>
        <item>Lab Assistant</item>
    </string-array>

    <string-array name="view">
        <item>List</item>
        <item>Grid</item>
        <item>Card</item>
    </string-array>

    <string-array name="language">
        <item>English</item>
        <item>Indonesia</item>
    </string-array>
</resources>