<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutApp1"
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/tintcolor"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutApp2"
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/tintcolor"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutApp3"
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/tintcolor"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutApp4"
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/tintcolor"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutApp5"
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/tintcolor"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutApp6"
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/tintcolor"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutApp7"
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/tintcolor"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutApp8"
                android:textColor="?attr/textcolor"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/tintcolor"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>